--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
         </form>
 
         <h2>Output</h2>
-        <pre id="output"></pre>
+        <div class="container">
+            <pre id="output"></pre>
+            <button type="button" onclick="copyOutputToClipboard()">Copy to Clipboard</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
