--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
             <pre id="output"></pre>
             <button type="button" onclick="copyOutputToClipboard()">Copy to Clipboard</button>
         </div>
+        <p>Inspired by the <a href="https://homebrewery.naturalcrit.com/new"">Homebrewery.</a></p>
     </div>
     <script src="script.js"></script>
 </body>
