--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <h1>Homebrewery Stat Block Generator</h1>
         <div class="tabs">
             <input type="radio" id="tab1" name="tab-group" checked>
-            <label for="tab1">Tab 1</label>
+            <label for="tab1">Creature Stat Block</label>
 
             <input type="radio" id="tab2" name="tab-group">
-            <label for="tab2">Tab 2</label>
+            <label for="tab2">Item Card</label>
             <div class="content">
                 <div class="content1">
                     <!-- Creature Stat Block Form -->
