--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
          </div>
         <p>Inspired by the <a href="https://homebrewery.naturalcrit.com/new"">Homebrewery.</a></p>
     </div>
+    <script src="spells.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
