--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
                         <label for="creature-traits">Traits (one per line):</label>
                         <textarea id="creature-traits" name="creature-traits"></textarea>
                         
+                        <label for="creature-spellcasting-ability">Spellcasting Ability:</label>
+                        <select id="creature-spellcasting-ability">
+                            <option value=3 selected>Intelligence</option>
+                            <option value=4>Wisdom</option>
+                            <option value=5>Charisma</option>
+                            <option value=0>Strength</option>
+                            <option value=1>Dexterity</option>
+                            <option value=2>Constitution</option>
+                        </select>
+
                         <label for="creature-spellcasting">Spellcasting (one per line):</label>
                         <textarea id="creature-spellcasting" name="creature-spellcasting"></textarea>
                         
