--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         
                         <label for="creature-spellcasting-ability">Spellcasting Ability:</label>
                         <select id="creature-spellcasting-ability">
-                            <option value=3 selected>Intelligence</option>
+                            <option selected value=3>Intelligence</option>
                             <option value=4>Wisdom</option>
                             <option value=5>Charisma</option>
                             <option value=0>Strength</option>
